fix partners logos on Ie11

--- a/assets/css/adds.css
+++ b/assets/css/adds.css
@@ -98,6 +98,25 @@
     list-style: none;
     width: 50%;
     padding: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .partners li{
+        display: block;
+    }
 }
 
 @media screen and (min-width: 900px) {
